# cpp-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cpp17/: CMakeLists.txt  README.md
cpp17/exercises/: README.md
cpp17/exercises/01-structured-bindings/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/02-if-init/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/03-ctad/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/04-constexpr-if/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/05-fold-expressions/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/06-attributes/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/07-optional/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/08-variant/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/09-string-view/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp17/exercises/10-filesystem/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/: CMakeLists.txt  README.md
cpp20/exercises/: README.md
cpp20/exercises/01-concepts/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/02-ranges/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/03-coroutines/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/04-modules/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/05-span/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/06-format/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/07-three-way-comparison/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/08-constexpr-extensions/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
cpp20/exercises/09-designated-initializers/: CMakeLists.txt  README.md  example.cpp  exercise.cpp  solution.cpp
docs/: architecture.md  clang-format.md  clang-tidy.md  cpp-compiler-support.md  modern-cpp-curriculum.md  unreal-engine-cpp20-guide.md
